# advent-of-code

./: .gitignore
2022/: .eslintrc.yml  package-lock.json  package.json  tsconfig.json
2022/src/: index.ts
2022/src/days/: 1.ts  10.ts  11.ts  12.ts  13.ts  14.ts  15.ts  16.ts  17.ts  18.ts  2.ts  20.ts  21.ts  25.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts  9.ts
2022/src/utils/: Arrays.ts  PuzzleError.ts  PuzzleHelper.ts
2023/: aoc.ipynb  pyproject.toml
2024/: aoc2024.ipynb
2025/: aoc2025.ipynb
